// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AITagView > Calling AI Tags > should disable btn if image dimensions are invalid 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    />
    <article
      class="css-17t5ffy css-1cz29mo"
      data-test-id="cf-ui-note"
      notetype="warning"
    >
      <svg
        aria-hidden="true"
        class="css-1a2ohuz"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <div
        class="css-j7qwjs"
      >
        <div
          class="css-n69953"
        >
          <p
            class="css-18y4b1e"
            data-test-id="cf-ui-paragraph"
          >
            Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
          </p>
        </div>
      </div>
    </article>
    <button
      buttontype="primary"
      class="css-128r0zu css-1kr4fmq"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_8909"
        >
          <input
            aria-checked="true"
            aria-describedby="checkbox_8909-helptext"
            checked=""
            class="css-gdy1z0"
            disabled=""
            id="checkbox_8909"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-1mx4g8e"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_8909-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > Calling AI Tags > should disable btn if image is too big 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    />
    <article
      class="css-17t5ffy css-1cz29mo"
      data-test-id="cf-ui-note"
      notetype="warning"
    >
      <svg
        aria-hidden="true"
        class="css-1a2ohuz"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <div
        class="css-j7qwjs"
      >
        <div
          class="css-n69953"
        >
          <p
            class="css-18y4b1e"
            data-test-id="cf-ui-paragraph"
          >
            Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
          </p>
        </div>
      </div>
    </article>
    <button
      buttontype="primary"
      class="css-128r0zu css-1kr4fmq"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_3962"
        >
          <input
            aria-checked="true"
            aria-describedby="checkbox_3962-helptext"
            checked=""
            class="css-gdy1z0"
            disabled=""
            id="checkbox_3962"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-1mx4g8e"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_3962-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > Calling AI Tags > should disable btn if image type is unsupported 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    />
    <article
      class="css-17t5ffy css-1cz29mo"
      data-test-id="cf-ui-note"
      notetype="warning"
    >
      <svg
        aria-hidden="true"
        class="css-1a2ohuz"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <div
        class="css-j7qwjs"
      >
        <div
          class="css-n69953"
        >
          <p
            class="css-18y4b1e"
            data-test-id="cf-ui-paragraph"
          >
            Unfortunately, we can only auto-tag PNG and JPG file types
          </p>
        </div>
      </div>
    </article>
    <button
      buttontype="primary"
      class="css-128r0zu css-1kr4fmq"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_4336"
        >
          <input
            aria-checked="true"
            aria-describedby="checkbox_4336-helptext"
            checked=""
            class="css-gdy1z0"
            disabled=""
            id="checkbox_4336"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-1mx4g8e"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_4336-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > Calling AI Tags > should fetch tags and render them on btn click 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    >
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            ai-tag-1
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            ai-tag-2
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            ai-tag-3
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      buttontype="primary"
      class="css-ndrb9n css-1kr4fmq"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_6360"
        >
          <input
            aria-describedby="checkbox_6360-helptext"
            class="css-199qhtr"
            id="checkbox_6360"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_6360-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > if there is an image > should add image tags on Enter 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    >
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            new tag
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      buttontype="primary"
      class="css-ndrb9n css-1kr4fmq"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_5924"
        >
          <input
            aria-describedby="checkbox_5924-helptext"
            class="css-199qhtr"
            id="checkbox_5924"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_5924-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > if there is an image > should ignore duplicate image tags 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    >
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            tag1
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            tag2
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      buttontype="primary"
      class="css-ndrb9n css-1kr4fmq"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_7333"
        >
          <input
            aria-describedby="checkbox_7333-helptext"
            class="css-199qhtr"
            id="checkbox_7333"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_7333-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > if there is an image > should render image tags if available 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-82ji86"
      data-test-id="image-tag"
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    >
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            tag1
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="css-1jts7t6 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          class="css-imt9h5"
        >
          <span>
            tag2
          </span>
        </span>
        <button
          aria-label="Close"
          class="css-5lduyq"
          data-test-id="cf-ui-button"
          type="button"
        >
          <span
            class="css-k008qs"
          >
            <svg
              aria-hidden="true"
              class="css-1jrff5x"
              color="currentColor"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      buttontype="primary"
      class="css-ndrb9n css-1kr4fmq"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_728"
        >
          <input
            aria-describedby="checkbox_728-helptext"
            class="css-199qhtr"
            id="checkbox_728"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_728-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView > if there is no image > should disable everything 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <input
      class="css-1403ws9"
      data-test-id="image-tag"
      disabled=""
      placeholder="Type a tag and press enter"
      type="text"
      value=""
      width="large"
    />
    <div
      class="css-m9mlq4"
    />
    <button
      buttontype="primary"
      class="css-128r0zu css-1kr4fmq"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Auto-tag from AI
      </span>
    </button>
    <div
      class="css-1fobf8d"
      data-test-id="cf-ui-form-control"
      role="group"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="checkbox_1626"
        >
          <input
            aria-checked="true"
            aria-describedby="checkbox_1626-helptext"
            checked=""
            class="css-gdy1z0"
            disabled=""
            id="checkbox_1626"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-1mx4g8e"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
          Overwrite existing tags
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="checkbox_1626-helptext"
        >
          Some help text
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="overwrite-tags-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        >
          validation message
        </p>
      </div>
    </div>
  </div>
</div>
`;
